<resources>
    <string name="app_name">SiConSignosApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_page">Login_page</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="usuario">Usuario</string>
    <string name="passwd">Contraseña</string>
    <string name="title_activity_registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nick">Nick</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Correo electronico</string>
    <string name="texto_estudio">En este apartado podras aprender el abecedario asi como enfrentarte a una serie de pruebas que te haran perfeccionar el lenguaje de signos.\n
    En el apartado ABC encontraras la traducción en imagenes de las diferentes letras del abecedario español.\n
    En el apartado Conversamos encontraras una serie de tests que te permitiran evalua\r tus conocimientos</string>
    <string name="title_activity_estudio">Estudio</string>
    <string name="title_activity_conectividad">Conectividad</string>
    <string name="title_activity_abc">ABC</string>
    <string name="title_activity_conversamos">Conversamos</string>

    <string name="title_activity_pregunta">Pregunta</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_pantalla_resultados">PantallaResultados</string>
    <string name="no_camera">La camara no esta disponible</string>
    <string name="no_app">No hay app disponible para sacar la foto</string>
    <string name="title_activity_sugerencia">sugerencia</string>
    <string name="title_activity_recupera_contra">recuperaContra</string>
    <string name="title_activity_llamando">llamando</string>


</resources>
