<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20px"
    android:paddingLeft="20px"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Registro"
    android:weightSum="1">



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <TextView android:text="@string/nombre" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/nombre"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="Introduce nombre"
            />

        <TextView android:text="@string/apellido" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/apellido"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="Introduce apellido"
            />

        <TextView android:text="@string/nick" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/nick"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="Introduce nick"
            />

        <TextView android:text="@string/contrasena" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/contrasena"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:password="true"
            android:hint="Introduce contraseña"
            />

        <TextView android:text="@string/email" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="Introduce email"
            />

    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:onClick="registro"
        />
</LinearLayout>
